[package]
name = "bank_vault"
description = "Defines a Vault collection which hides its contents and operates on keys"
version = "0.0.1"
authors = ["ChefPancake <https://github.com/ChefPancake>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }