[package]
name = "bank_vault"
description = "Defines a Vault collection which hides its contents and operates on keys"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ChefPancake/bank_vault/"
repository = "https://github.com/ChefPancake/bank_vault/"
documentation = "https://docs.rs/bank_vault"
version = "0.0.2"
authors = ["ChefPancake"]
edition = "2018"
readme = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }